# alerter

./: .gitignore  .rooignore  CMakeLists.txt  CMakePresets.json  LICENSE  MyApp.h  README.md  TrayIcon.cpp  TrayIcon.h  env.json.sample  icon.rc  icons.cpp  icons.h  logger.h  main.cpp  messaging.cpp  messaging.h  notification_content.cpp  notification_content.h  notification_content_area.cpp  notification_content_area.h  notification_timer.cpp  notification_timer.h  notification_window.cpp  notification_window.h  notifications.cpp  notifications.h  pipe.cpp  pipe.h  reader_thread.cpp  reader_thread.h  task_bar_icon.cpp  task_bar_icon.h  telex_protocol.cpp  telex_protocol.h  telex_start_app.cpp  telex_start_app.h  todo.md  vcpkg.json  window.cpp  (+2 more)
apps/flutter-test-app/alerter_test_app/: README.md  pubspec.yaml
apps/flutter-test-app/alerter_test_app/android/app/: build.gradle.kts
apps/flutter-test-app/alerter_test_app/android/app/src/main/: AndroidManifest.xml
apps/flutter-test-app/alerter_test_app/android/app/src/main/kotlin/com/example/alerter_test_app/: MainActivity.kt
apps/flutter-test-app/alerter_test_app/ios/Runner/: Info.plist
apps/flutter-test-app/alerter_test_app/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter-test-app/alerter_test_app/lib/: main.dart  notifications.dart  pipe_writer.dart  telex_protocol.dart
apps/flutter-test-app/alerter_test_app/linux/: CMakeLists.txt
apps/flutter-test-app/alerter_test_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter-test-app/alerter_test_app/windows/: CMakeLists.txt
apps/flutter-test-app/alerter_test_app/windows/runner/: Runner.rc  main.cpp
centrifugo/: centrifugo.cpp  centrifugo.h  unistream.grpc.pb.h  unistream.pb.cc  unistream.proto
docs/: README.md  setup.md  todo.md
include/: events.h  http_server.h  job_queue.h  login_dialog.h  messaging.h  notification_content.h  notification_window.h  pipe.h  task_bar_icon.h  telex.h  telex_protocol.h  telex_start_app.h  writer_thread.h
res/: icon.h  icon.rc  images.h  resources.cpp
src/: http_server.cpp  job_queue.cpp  logger.cpp  messaging.cpp  notifications.cpp  reader_thread.cpp  telex.cpp  writer_thread.cpp
src/centrifugo/: centrifugo.cpp  centrifugo.h  unistream.grpc.pb.cc  unistream.pb.h
src/ui/: login_dialog.cpp  notification_content.cpp  notification_window.cpp  task_bar_icon.cpp  telex_start_app.cpp
testing/flutter-test-app/alerter_test_app/: pubspec.yaml
testing/flutter-test-app/alerter_test_app/lib/: http_client.dart  main.dart  notifications.dart  pipe_reader.dart
testing/flutter-test-app/alerter_test_app/linux/runner/: my_application.cc
testing/flutter-test-app/alerter_test_app/macos/Runner.xcodeproj/: project.pbxproj
testing/flutter-test-app/alerter_test_app/macos/Runner/Configs/: AppInfo.xcconfig
testing/flutter-test-app/alerter_test_app/web/: index.html  manifest.json
testing/python-site-site/: .gitignore  requirements.txt
testing/python-site-site/static/: script.js
testing/python-site-site/templates/: index.html
testing/telex-tauri-test/: package.json  pnpm-lock.yaml
testing/telex-tauri-test/src/: App.tsx
testing/telex-tauri-test/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
testing/telex-tauri-test/src-tauri/src/: http_client.rs  lib.rs  main.rs  notification_client.rs  pipe_client.rs
